Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37860

Assertion `!waiting' failed in TP_connection_generic::wait_begin

    XMLWordPrintable

Details

    • Not for Release Notes

    Description

      --source include/have_innodb.inc
      --source include/have_partition.inc
       
      --let $restart_parameters = --thread-handling=pool-of-threads
      --source include/restart_mysqld.inc
       
      CREATE TABLE t1 (
       `col_varchar_5_latin1` int,
       `col_varchar_64_cp932` int,
       `col_varchar_5_cp932` int,
       `col_varchar_5_latin1_key` int,
       `col_varchar_32_cp932_key` int,
       `col_int` int,
       `col_datetime` int,
       `col_varchar_32_cp932` int,
       `col_varchar_32_utf8` int
      ) ENGINE=InnoDB;
       
      CREATE TABLE t2 (
       `col_varchar_32_cp932` int,
       `col_varchar_32_latin1_key` int,
       `col_varchar_64_latin1` int,
       `col_varchar_64_cp932` int,
       `col_varchar_64_latin1_key` int,
       `col_varchar_64_utf8_key` int,
       `col_varchar_32_utf8` int,
       `col_varchar_5_utf8_key` int,
       `col_int` int,
       `col_varchar_5_cp932_key` int,
       `col_varchar_5_latin1_key` int,
       `col_date` int,
       `col_varchar_64_utf8` int,
       `col_varchar_32_cp932_key` int,
       `col_varchar_32_latin1` int,
       `col_varchar_64_cp932_key` int,
       `col_int_key` int,
       `col_datetime_key` int,
       `col_date_key` int,
       `col_varchar_5_latin1` int,
       `col_datetime` int,
       `col_varchar_5_cp932` int,
       `col_varchar_32_utf8_key` int,
       `col_varchar_5_utf8` int
      ) ENGINE=InnoDB PARTITION BY HASH(col_int) PARTITIONS 8;
       
      CREATE TABLE t3 (a INT) ENGINE=InnoDB PARTITION BY KEY(a) PARTITIONS 97;
       
      DROP TABLE t1, t2, t3;
      

      11.4 44dc149c78ca62cf2200b758dc23d15d01711f0e

      mariadbd: /data/bld/11.4-asan-ubsan/sql/threadpool_generic.cc:1357: virtual void TP_connection_generic::wait_begin(int): Assertion `!waiting' failed.
      251014 22:08:24 [ERROR] /share8t/bld/11.4-asan-ubsan/sql/mariadbd got signal 6 ;
       
      10 0x00007f5cbf253eb2 in __GI___assert_fail (assertion=0x558a7a364a00 "!waiting", file=0x558a7a363be0 "/data/bld/11.4-asan-ubsan/sql/threadpool_generic.cc", line=1357, function=0x558a7a364a40 "virtual void TP_connection_generic::wait_begin(int)") at ./assert/assert.c:101
      #11 0x0000558a78332001 in TP_connection_generic::wait_begin (this=0x608000009020, type=<optimized out>) at /data/bld/11.4-asan-ubsan/sql/threadpool_generic.cc:1357
      #12 0x0000558a7733bff0 in tp_wait_begin (thd=<optimized out>, type=2) at /data/bld/11.4-asan-ubsan/sql/threadpool_common.cc:578
      #13 0x0000558a761a6351 in thd_wait_begin (thd=0x62c0001e0218, wait_type=2) at /data/bld/11.4-asan-ubsan/sql/sql_class.cc:5879
      #14 0x0000558a79462b5f in buf_read_page_low (page_id=..., zip_size=zip_size@entry=0, chain=..., space=space@entry=0x6130000011d8, block=@0x7f5cad295c60: 0x0, thd=<optimized out>, sync=<optimized out>) at /data/bld/11.4-asan-ubsan/storage/innobase/buf/buf0rea.cc:243
      #15 0x0000558a79464e69 in buf_read_page (page_id=..., chain=..., unzip=unzip@entry=true) at /data/bld/11.4-asan-ubsan/storage/innobase/buf/buf0rea.cc:441
      #16 0x0000558a793f1195 in buf_page_get_gen (page_id=..., zip_size=<optimized out>, rw_latch=rw_latch@entry=RW_SX_LATCH, guess=guess@entry=0x0, mode=mode@entry=16, mtr=mtr@entry=0x7f5cad296720, err=<optimized out>) at /data/bld/11.4-asan-ubsan/storage/innobase/buf/buf0buf.cc:2792
      #17 0x0000558a795d45b4 in fsp_get_header (space=space@entry=0x6130000011d8, mtr=mtr@entry=0x7f5cad296720, err=err@entry=0x7f5cad295fd0) at /data/bld/11.4-asan-ubsan/storage/innobase/fsp/fsp0fsp.cc:133
      #18 0x0000558a795e0d1f in fsp_reserve_free_extents (n_reserved=n_reserved@entry=0x7f5cad2960c0, space=0x6130000011d8, n_ext=n_ext@entry=3, alloc_type=alloc_type@entry=FSP_NORMAL, mtr=mtr@entry=0x7f5cad296720, n_pages=n_pages@entry=2) at /data/bld/11.4-asan-ubsan/storage/innobase/fsp/fsp0fsp.cc:2433
      #19 0x0000558a7936c6cb in btr_cur_pessimistic_insert (flags=flags@entry=0, cursor=cursor@entry=0x7f5cad296340, offsets=offsets@entry=0x7f5cad296270, heap=heap@entry=0x7f5cad296250, entry=entry@entry=0x6170002779a0, rec=rec@entry=0x7f5cad296290, big_rec=<optimized out>, n_ext=0, thr=<optimized out>, mtr=<optimized out>) at /data/bld/11.4-asan-ubsan/storage/innobase/btr/btr0cur.cc:2608
      #20 0x0000558a79050d2f in row_ins_clust_index_entry_low (flags=flags@entry=0, mode=<optimized out>, mode@entry=BTR_MODIFY_TREE, index=index@entry=0x616000053820, n_uniq=n_uniq@entry=2, entry=entry@entry=0x6170002779a0, n_ext=n_ext@entry=0, thr=<optimized out>) at /data/bld/11.4-asan-ubsan/storage/innobase/row/row0ins.cc:2962
      #21 0x0000558a79051f20 in row_ins_clust_index_entry (index=index@entry=0x616000053820, entry=entry@entry=0x6170002779a0, thr=thr@entry=0x61b0002db4f8, n_ext=n_ext@entry=0) at /data/bld/11.4-asan-ubsan/storage/innobase/row/row0ins.cc:3348
      #22 0x0000558a7905278f in row_ins_index_entry (index=0x616000053820, entry=0x6170002779a0, thr=thr@entry=0x61b0002db4f8) at /data/bld/11.4-asan-ubsan/storage/innobase/row/row0ins.cc:3471
      #23 0x0000558a79052ae9 in row_ins_index_entry_step (node=node@entry=0x61b0002db220, thr=thr@entry=0x61b0002db4f8) at /data/bld/11.4-asan-ubsan/storage/innobase/row/row0ins.cc:3637
      #24 0x0000558a790536f4 in row_ins (node=node@entry=0x61b0002db220, thr=thr@entry=0x61b0002db4f8) at /data/bld/11.4-asan-ubsan/storage/innobase/row/row0ins.cc:3754
      #25 0x0000558a7905457a in row_ins_step (thr=thr@entry=0x61b0002db4f8) at /data/bld/11.4-asan-ubsan/storage/innobase/row/row0ins.cc:3883
      #26 0x0000558a78f80dd2 in que_thr_step (thr=thr@entry=0x61b0002db4f8) at /data/bld/11.4-asan-ubsan/storage/innobase/que/que0que.cc:532
      #27 0x0000558a78f812bf in que_run_threads_low (thr=thr@entry=0x61b0002db4f8) at /data/bld/11.4-asan-ubsan/storage/innobase/que/que0que.cc:609
      #28 0x0000558a78f815cc in que_run_threads (thr=thr@entry=0x61b0002db4f8) at /data/bld/11.4-asan-ubsan/storage/innobase/que/que0que.cc:629
      #29 0x0000558a790bd443 in row_create_table_for_mysql (table=table@entry=0x61800003b120, trx=0x7f5cb66c1f40) at /data/bld/11.4-asan-ubsan/storage/innobase/row/row0mysql.cc:2070
      #30 0x0000558a78b7b6d3 in create_table_info_t::create_table_def (this=this@entry=0x7f5cad297ce0) at /data/bld/11.4-asan-ubsan/storage/innobase/handler/ha_innodb.cc:10882
      #31 0x0000558a78b3559d in create_table_info_t::create_table (this=this@entry=0x7f5cad297ce0, create_fk=create_fk@entry=true) at /data/bld/11.4-asan-ubsan/storage/innobase/handler/ha_innodb.cc:12792
      #32 0x0000558a78b37984 in ha_innobase::create (this=this@entry=0x62a000037278, name=name@entry=0x7f5cad2983e0 "./test/t3#P#p95", form=form@entry=0x7f5cad298cf0, create_info=create_info@entry=0x7f5cad29b340, file_per_table=<optimized out>, trx=0x7f5cb66c1f40, trx@entry=0x0) at /data/bld/11.4-asan-ubsan/storage/innobase/handler/ha_innodb.cc:13306
      #33 0x0000558a78b3d50c in ha_innobase::create (this=0x62a000037278, name=0x7f5cad2983e0 "./test/t3#P#p95", form=0x7f5cad298cf0, create_info=0x7f5cad29b340) at /data/bld/11.4-asan-ubsan/storage/innobase/handler/ha_innodb.cc:13354
      #34 0x0000558a77832bc5 in handler::ha_create (this=this@entry=0x62a000037278, name=name@entry=0x7f5cad2983e0 "./test/t3#P#p95", form=form@entry=0x7f5cad298cf0, info_arg=info_arg@entry=0x7f5cad29b340) at /data/bld/11.4-asan-ubsan/sql/handler.cc:5841
      #35 0x0000558a7866f9c0 in ha_partition::create (this=0x62500002d148, name=<optimized out>, table_arg=<optimized out>, create_info=0x7f5cad29b340) at /data/bld/11.4-asan-ubsan/sql/ha_partition.cc:857
      #36 0x0000558a77832bc5 in handler::ha_create (this=this@entry=0x62500002d148, name=name@entry=0x7f5cad29aa00 "./test/t3", form=form@entry=0x7f5cad298cf0, info_arg=info_arg@entry=0x7f5cad29b340) at /data/bld/11.4-asan-ubsan/sql/handler.cc:5841
      #37 0x0000558a7785ee74 in ha_create_table (thd=thd@entry=0x62c0001e0218, path=<optimized out>, db=<optimized out>, table_name=table_name@entry=0x62d0000dc578 "t3", create_info=create_info@entry=0x7f5cad29b340, frm=frm@entry=0x7f5cad29a9e0, skip_frm_file=<optimized out>) at /data/bld/11.4-asan-ubsan/sql/handler.cc:6312
      #38 0x0000558a7696e5dd in create_table_impl (thd=thd@entry=0x62c0001e0218, ddl_log_state_create=<optimized out>, ddl_log_state_create@entry=0x7f5cad29ad70, ddl_log_state_rm=<optimized out>, ddl_log_state_rm@entry=0x7f5cad29adb0, orig_db=..., orig_table_name=..., db=..., table_name=..., path=..., options=..., create_info=<optimized out>, alter_info=<optimized out>, create_table_mode=<optimized out>, is_trans=<optimized out>, key_info=<optimized out>, key_count=<optimized out>, frm=<optimized out>) at /data/bld/11.4-asan-ubsan/sql/sql_table.cc:4851
      #39 0x0000558a7696f5a2 in mysql_create_table_no_lock (thd=thd@entry=0x62c0001e0218, ddl_log_state_create=ddl_log_state_create@entry=0x7f5cad29ad70, ddl_log_state_rm=ddl_log_state_rm@entry=0x7f5cad29adb0, create_info=create_info@entry=0x7f5cad29b340, alter_info=alter_info@entry=0x7f5cad29b190, is_trans=is_trans@entry=0x7f5cad29ad60, create_table_mode=<optimized out>, table_list=<optimized out>) at /data/bld/11.4-asan-ubsan/sql/sql_table.cc:4953
      #40 0x0000558a76971026 in mysql_create_table (thd=thd@entry=0x62c0001e0218, create_table=create_table@entry=0x62d0000dc5d8, create_info=create_info@entry=0x7f5cad29b340, alter_info=alter_info@entry=0x7f5cad29b190) at /data/bld/11.4-asan-ubsan/sql/sql_table.cc:5196
      #41 0x0000558a7699c6ca in Sql_cmd_create_table_like::execute (this=<optimized out>, thd=0x62c0001e0218) at /data/bld/11.4-asan-ubsan/sql/sql_table.cc:13565
      #42 0x0000558a76479e3b in mysql_execute_command (thd=thd@entry=0x62c0001e0218, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /data/bld/11.4-asan-ubsan/sql/sql_parse.cc:5877
      #43 0x0000558a7647ea51 in mysql_parse (thd=thd@entry=0x62c0001e0218, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x7f5cad29c920) at /data/bld/11.4-asan-ubsan/sql/sql_parse.cc:7900
      #44 0x0000558a76487de8 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x62c0001e0218, packet=packet@entry=0x62900010e219 "CREATE TABLE t3 (a INT) ENGINE=InnoDB PARTITION BY KEY(a) PARTITIONS 97", packet_length=packet_length@entry=71, blocking=blocking@entry=false) at /data/bld/11.4-asan-ubsan/sql/sql_parse.cc:1905
      #45 0x0000558a76494a3e in do_command (thd=thd@entry=0x62c0001e0218, blocking=blocking@entry=false) at /data/bld/11.4-asan-ubsan/sql/sql_parse.cc:1418
      #46 0x0000558a7733cfa0 in threadpool_process_request (thd=thd@entry=0x62c0001e0218) at /data/bld/11.4-asan-ubsan/sql/threadpool_common.cc:438
      #47 0x0000558a7733dede in tp_callback (c=0x608000009020) at /data/bld/11.4-asan-ubsan/sql/threadpool_common.cc:252
      #48 0x0000558a78334be5 in worker_main (param=0x630000010958) at /data/bld/11.4-asan-ubsan/sql/threadpool_generic.cc:1565
      #49 0x0000558a786eb2a5 in pfs_spawn_thread (arg=0x61700001ff98) at /data/bld/11.4-asan-ubsan/storage/perfschema/pfs.cc:2201
      #50 0x00007f5cbf2a81c4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #51 0x00007f5cbf32885c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
      

      The failure started happening after this commit in 11.4 (between 11.4.8 and 11.4.9):

      commit 13076351f10f59a9bedb32e5233666d35c86f51f
      Author:     Marko Mäkelä
      AuthorDate: Mon Sep 29 14:13:27 2025 +0300
       
          MDEV-37152: Reimplement innodb_buffer_pool_read_requests
      

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.75h
                  2.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.