MDEV-37860: Assertion !waiting failed with thread-handling=pool-of-threads

In commit 13076351f10f59a9bedb32e5233666d35c86f51f (MDEV-37152)
some code was refactored that would break the server-side
connection pool logic. Calls to thd_wait_begin() and thd_wait_end()
were not balanced.

buf_read_page_low(): Only invoke thd_wait_begin() and thd_wait_end()
for synchronous reads, and do that also when the read operation fails.

Reviewed by: Vladislav Lesin